Mon Nov 22 13:45:05 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/GNUmakefile.clone:

          Renamed GNUmakefile to GNUmakefile.clone to avoid being
          overwritten when bin.mpc is processed.

        * ACE-INSTALL.html:

          Changed documentation on building clone.cpp to take the above into
          account.

Mon Nov 22 19:33:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          When building with gcc for cygwin the binutils package
          must also be installed.

Mon Nov 22 12:08:27 2004  Ciju John  <john_c@ociweb.com>

        * bin/MakeProjectCreator/config/notify.mpb:
          Fixed fuzz.pl caught inconsistencies.

Mon Nov 22 11:58:25 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/fuzz.pl:

          Account for multiple whitespace when checking for non-bool return
          values on equality/in-equality operators.

Mon Nov 22 07:44:23 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

        * Kokyu/Kokyu_dsrt.{cpp,h}:

          Changed the return type of
          DSRT_Dispatcher_Factory::create_dispatcher method from
          auto_ptr<DSRT_Dispatcher> to DSRT_Dispatcher*. This was causing
          build errors with VxWorks5.5.1_PPC85XX_GCC3.3. Thanks to Johnny
          Willemsen (jwillemsen@remedy.nl) for pointing this out.

        * Kokyu/Kokyu.h:

          Changed some documentation.

Sun Nov 21 10:34:42 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * ace/Message_Queue_T.h: Changed the access control specifier
          of ACE_Message_Queue_Ex::queue_ from private to protected to
          enabled subclasses to access it.  Thanks to Nuno Silva
          <Nuno.Silva@edisoft.pt> for this suggestion.  This change fixes
          bugid 1984.

Sat Nov 20 18:12:55 UTC 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * ace/OS_NS_Thread.inl:

          Fixes for thr_getprio () on Win32. Thanks to Abhi <abhi at